--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "build": "tsc",
         "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
         "lint": "tslint -p tsconfig.json",
+        "preversion": "npm run build",
         "version": "npm run format && git add -A src",
         "postversion": "git push && git push --tags"
     },
